--- a/index.html
+++ b/index.html
@@ -17,32 +17,32 @@
 	<h1>Uttrakhand-Scene-Gallery</h1>
 	<div class="Gallery">
 		<a target="_blank" href=" https://www.tripadvisor.in/Attraction_Review-g1045172-d10512557-Reviews-Kausani_Tea_Estate-Kausani_Bageshwar_District_Uttarakhand.htmlimages/U1.jpg">
-			<img src="../images/U1.jpg" alt="first" width="600" height="400">
+			<img src="U1.jpg" alt="first" width="600" height="400">
 			<div class = "desc">Uttrakhand Tea Gardens</div>
 		</a></div>
 			<div class="Gallery">
 				<a target="_blank" href="https://en.wikipedia.org/wiki/List_of_mountain_peaks_of_Uttarakhand">
-			<img src ="../images/U2.jpg" alt ="second" width = "600" height =" 400">
+			<img src ="U2.jpg" alt ="second" width = "600" height =" 400">
 			<div class = "desc">Mountains peaks</div>
 			</a></div>
 			<div class="Gallery">
 				<a target="_blank" href="http://www.uttarakhand.org.in/kosi-flowing-near-betalghat">
-			<img src ="../images/U3.jpg" alt ="third" width = "600" height =" 400">
+			<img src ="U3.jpg" alt ="third" width = "600" height =" 400">
 			<div class = "desc">Kosi river</div>
 			</a></div>
 			<div class="Gallery">
 				<a target="_blank" href="https://www.tripadvisor.in/Attractions-g297686-Activities-c61-t214-Uttarakhand.html">
-			<img src ="../images/U4.jpg" alt ="fourth" width = "600" height =" 400">
+			<img src ="U4.jpg" alt ="fourth" width = "600" height =" 400">
 			<div class = "desc">Bike tours</div>
 			</a></div>
 			<div class="Gallery">
 				<a target="_blank" href="https://www.euttaranchal.com/tourism/photos/nainital-lake-photos.php">
-			<img src ="../images/U5.jpg" alt ="fifth" width = "600" height =" 400">
+			<img src ="U5.jpg" alt ="fifth" width = "600" height =" 400">
 			<div class = "desc">Nanital Lake</div>
           </a></div>
 			<div class="Gallery">
 				<a target="_blank" href="https://www.gettyimages.in/photos/kedarnath-temple?phrase=kedarnath%20temple&sort=mostpopular">
-			<img src ="../images/U6.jpg" alt ="sixth-" width = "600" height =" 200">
+			<img src ="U6.jpg" alt ="sixth-" width = "600" height =" 200">
 			<div class = "desc">Kedarnath Temple</div>
 			</a></div>
   
