--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="../css/style1.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 <title>Photo-Gallery</title>
 <body>
 	<section id ="main">
